# students-services

./: .gitignore  docker-compose.yaml
stats-tg/: Dockerfile  main.py  pyproject.toml
stats-tg/templates/: error.html  stats.html
stats/db/: base.py  event.py
stats/routes/: events_stats.py
stats/views/: add_event.py  search_event.py
vk-bot/: Dockerfile  main.py  requirements.txt
